--- a/receive.html
+++ b/receive.html
@@ -64,7 +64,7 @@
                  function initialize() {
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(null, {
-                        host: 'https://mypeer2d.herokuapp.com/',
+                        host: 'https://mypeer2d.herokuapp.com',
                         port: 9000,
                         path: '/',
                         debug: 2
