--- a/send.html
+++ b/send.html
@@ -77,9 +77,8 @@
                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(null, {
-                        host: 'https://mypeer2d.herokuapp.com',
-                        port: 9000,
-                        path: '/',                        
+                        host: 'https://mypeer2d.herokuapp.com/',
+                        port: 9000,                       
                         debug: 2
                     });
 
