--- a/send.html
+++ b/send.html
@@ -77,8 +77,10 @@
                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(null, {
-                        host: 'https://mypeer2d.herokuapp.com/',
-                        port: 9000,                       
+                        host: 'https://mypeer2d.herokuapp.com',
+                        port: 443,
+                        path: '/',
+                        secure: true,                     
                         debug: 2
                     });
 
