--- a/receive.html
+++ b/receive.html
@@ -64,7 +64,7 @@
                  function initialize() {
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(null, {
-                        host: 'mypeer2d.herokuapp.com',
+                        host: '9000-yellow-earwig-r9lgl3kv.ws-eu16.gitpod.io',
                         port: 9000,
                         path: '/',
                         secure: true,
