--- a/send.html
+++ b/send.html
@@ -76,9 +76,9 @@
                  */
                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
-                    peer = new Peer(null, {
-                        host: '9000-yellow-earwig-r9lgl3kv.ws-eu16.gitpod.io',
-                        port: 9000,
+                    peer = new Peer({
+                        host: '9000-harlequin-koala-ux6f20kd.ws-eu16.gitpod.io',
+                        port: '9000',
                         path: '/',
                         secure: true,                     
                         debug: 2
