--- a/send.html
+++ b/send.html
@@ -76,7 +76,7 @@
                  */
                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
-                    peer = new Peer({
+                    peer = new Peer('0adefs'{
                         host: '9000-harlequin-koala-ux6f20kd.ws-eu16.gitpod.io',
                         port: '9000',
                         path: '/',
