--- a/receive.html
+++ b/receive.html
@@ -63,7 +63,7 @@
                  */
                  function initialize() {
                     // Create own peer object with connection to shared PeerJS server
-                    peer = new Peer({
+                    peer = new Peer('9ados', {
                         host: '9000-harlequin-koala-ux6f20kd.ws-eu16.gitpod.io',
                         port: '9000',
                         path: '/',
